force-app/main/default/objects/tc9_pr__Pay_Batch__c/tc9_pr__Pay_Batch__c.object-meta.xml
<CustomObject>
    <label>Pay Batch</label>
    <nameField>
        <displayFormat>PB-{0000000000}</displayFormat>
        <label>Pay Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>