force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Batch_Id__c</fullName>
    <description>The record id of the Batch Log record associated with the creation of the Pay Batch</description>
    <inlineHelpText>The record id of the Batch Log record associated with the creation of the Pay Batch</inlineHelpText>
    <label>Batch Id</label>
    <type>TextArea</type>
</CustomField>