force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent calendar period based on the maximum payroll date entered at pay batch creation</description>
    <inlineHelpText>The parent calendar period based on the maximum payroll date entered at pay batch creation</inlineHelpText>
    <label>Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Pay Batches</relationshipLabel>
    <relationshipName>Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>