force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Date_Time_Finalised__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Date_Time_Finalised__c</fullName>
    <description>The most recent date and time payrun finalise was performed on the pay batch</description>
    <inlineHelpText>The most recent date and time payrun finalise was performed on the pay batch</inlineHelpText>
    <label>Date Time Finalised</label>
    <type>DateTime</type>
</CustomField>