force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Enable_Payee_Leave_Rule_Calculation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Enable_Payee_Leave_Rule_Calculation__c</fullName>
    <description>Indicates whether the calculation of Payee Leave Rules will occur in this pay batch</description>
    <inlineHelpText>Indicates whether the calculation of Payee Leave Rules will occur in this pay batch</inlineHelpText>
    <label>Enable Payee Leave Rule Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>