force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Calendar_Periods__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Calendar_Periods__c</fullName>
    <description>Contains the calendar periods that were used to create the pay batch. This cannot be modified by the user</description>
    <inlineHelpText>Contains the calendar periods that were used to create the pay batch. This cannot be modified by the user</inlineHelpText>
    <label>Filtered Calendar Periods</label>
    <length>150</length>
    <type>Text</type>
</CustomField>