force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the Pay Batch is created, if filtered by a Client, this field indicates which Client the Pay Batch was filtered by</description>
    <inlineHelpText>When the Pay Batch is created, if filtered by a Client, this field indicates which Client the Pay Batch was filtered by</inlineHelpText>
    <label>Filtered Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Batches</relationshipLabel>
    <relationshipName>Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>