force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Clients__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Clients__c</fullName>
    <description>When the Pay Batch is created, if filtered by a Client, this field indicates which Client the Pay Batch was filtered by.</description>
    <inlineHelpText>When the Pay Batch is created, if filtered by a Client, this field indicates which Client the Pay Batch was filtered by.</inlineHelpText>
    <label>Filtered Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>