force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the pay batch is created, if filtered by Employee, this field indicates which Employee the Pay Batch was filtered by</description>
    <inlineHelpText>When the pay batch is created, if filtered by Employee, this field indicates which Employee the Pay Batch was filtered by</inlineHelpText>
    <label>Filtered Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Batches</relationshipLabel>
    <relationshipName>Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>