force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Funding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Funding_Requirement__c</fullName>
    <description>When the pay batch is created, if filtered by Funding Requirement, this field indicates which value the Pay Batch was filtered by.</description>
    <inlineHelpText>When the pay batch is created, if filtered by Funding Requirement, this field indicates which value the Pay Batch was filtered by.</inlineHelpText>
    <label>Filtered Funding Requirement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>