force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Pay_Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Pay_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the Pay Batch is created, if filtered by a Pay Location, this field indicates which Pay Location the Pay Batch was filtered by</description>
    <inlineHelpText>When the Pay Batch is created, if filtered by a Pay Location, this field indicates which Pay Location the Pay Batch was filtered by</inlineHelpText>
    <label>Filtered Pay Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Pay Batches</relationshipLabel>
    <relationshipName>Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>