force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Pay_Transactions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Pay_Transactions__c</fullName>
    <description>Adding a Text Area as Record Ids are 18 characters long x 20 Record Types and comma-delimited. When null it signifies that ALL have been selected.</description>
    <inlineHelpText>Adding a Text Area as Record Ids are 18 characters long x 20 Record Types and comma-delimited. When null it signifies that ALL have been selected.</inlineHelpText>
    <label>Filtered Pay Transactions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>