force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Filtered_Payee_Locations__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Filtered_Payee_Locations__c</fullName>
    <description>When the pay batch is created, if filtered by Payee Location, this field indicates which Location the Pay Batch was filtered by.</description>
    <inlineHelpText>When the pay batch is created, if filtered by Payee Location, this field indicates which Location the Pay Batch was filtered by.</inlineHelpText>
    <label>Filtered Payee Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>