force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Flag_Incomplete_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Incomplete_Payment_Entity__c</fullName>
    <description>The Payment Details of the related Payment Entity are incomplete.</description>
    <formula>If ( NOT ISBLANK (tc9_pr__Payment_Entity__r.tc9_pr__Payment_Details_Incomplete_Reason__c) , tc9_pr__Payment_Entity__r.tc9_pr__Payment_Details_Incomplete_Reason__c, &apos;&apos; )</formula>
    <inlineHelpText>The Payment Details of the related Payment Entity are incomplete.</inlineHelpText>
    <label>Flag Incomplete Payment Entity</label>
    <type>Text</type>
</CustomField>