force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Include_Earlier_Dates__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Include_Earlier_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of the filter at the creation of a Pay Batch. This value cannot be updated.</description>
    <inlineHelpText>The value of the filter at the creation of a Pay Batch. This value cannot be updated.</inlineHelpText>
    <label>Include Earlier Dates</label>
    <type>Checkbox</type>
</CustomField>