force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Pay_Advice_Net__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Net__c</fullName>
    <description>The total net amount of related Pay Advices</description>
    <inlineHelpText>The total net amount of related Pay Advices</inlineHelpText>
    <label>Pay Advice Net</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>