force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Pay_Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Type__c</fullName>
    <description>Indicates how the pay batch will be treated during finalise and post-processing activities</description>
    <inlineHelpText>Indicates how the pay batch will be treated during finalise and post-processing activities</inlineHelpText>
    <label>Pay Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Pay_Batch_Type</valueSetName>
    </valueSet>
</CustomField>