force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payee_Selection__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Selection__c</fullName>
    <description>The value entered by the user at the point of Pay Batch creation.</description>
    <inlineHelpText>The value entered by the user at the point of Pay Batch creation.</inlineHelpText>
    <label>Payee Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Payee_Selection</valueSetName>
    </valueSet>
</CustomField>