force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Date__c</fullName>
    <description>Defines the Payment File Release Date</description>
    <inlineHelpText>Defines the Payment File Release Date</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>