force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment entity at the filter selection. A pay batch can have only one payment entity. This value cannot be updated.</description>
    <inlineHelpText>The payment entity at the filter selection. A pay batch can have only one payment entity. This value cannot be updated.</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Batches (Payment Entity)</relationshipLabel>
    <relationshipName>Pay_Batches1</relationshipName>
    <type>Lookup</type>
</CustomField>