force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payment_File_Apex_Batch_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File_Apex_Batch_Log_ID__c</fullName>
    <description>The Apex Batch Log ID for batch job used in creating the associated Payment File(s).</description>
    <inlineHelpText>The Apex Batch Log ID for batch job used in creating the associated Payment File(s).</inlineHelpText>
    <label>Payment File Batch ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>