force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payment_File_Net__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File_Net__c</fullName>
    <description>The total net amount of related Payment Files</description>
    <inlineHelpText>The total net amount of related Payment Files</inlineHelpText>
    <label>Payment File Net</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>