force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payment_File_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File_Payment_Date__c</fullName>
    <description>The Payment Date that will be applied to the Payment Files attributed to the Pay Batch.</description>
    <inlineHelpText>The Payment Date that will be applied to the Payment Files attributed to the Pay Batch.</inlineHelpText>
    <label>Payment File Payment Date</label>
    <type>Date</type>
</CustomField>