force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Date__c</fullName>
    <description>The anticipated date that pay batch will be created and calculated.</description>
    <inlineHelpText>The anticipated date that pay batch will be created and calculated.</inlineHelpText>
    <label>Payroll Date</label>
    <type>Date</type>
</CustomField>