force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Payroll_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Jurisdiction__c</fullName>
    <description>Determines which payroll calculations and downstream processes will be associated with this Pay Batch.</description>
    <formula>TEXT(tc9_pr__Schedule__r.tc9_pr__Payroll_Jurisdiction__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines which payroll calculations and downstream processes will be associated with this Pay Batch.</inlineHelpText>
    <label>Payroll Jurisdiction</label>
    <type>Text</type>
</CustomField>