force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Tax_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Tax_Period__c</fullName>
    <description>Indicates which period of the financial year the payment date falls within (UK only, currently).</description>
    <inlineHelpText>Indicates which period of the financial year the payment date falls within (UK only, currently).</inlineHelpText>
    <label>Tax Period</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>