force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Total_Employee_Superannuation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Employee_Superannuation__c</fullName>
    <description>The sum of Total Employee Contributions from related Payee Pay Batch records.</description>
    <inlineHelpText>The sum of Total Employee Contributions from related Payee Pay Batch records.</inlineHelpText>
    <label>Total Employee Superannuation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>