force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Total_Net__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Net__c</fullName>
    <description>The total net earnings from all related Payee Pay Batch records.</description>
    <inlineHelpText>The total net earnings from all related Payee Pay Batch records.</inlineHelpText>
    <label>Total Net</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>