force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Total_UK_ER_NI__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_UK_ER_NI__c</fullName>
    <description>The sum of Employer National Insurance Contributions from related Payee Pay Batch records.</description>
    <label>Total UK ER NI</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>