force-app/main/default/objects/tc9_pr__Pay_Batch__c/fields/tc9_pr__Unique_Payees__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Unique_Payees__c</fullName>
    <description>The count of unique Payees from related Payee Pay Batch records.</description>
    <inlineHelpText>The count of unique Payees from related Payee Pay Batch records.</inlineHelpText>
    <label>Unique Payees</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>