force-app/main/default/objects/tc9_pr__Pay_Batch__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Pay_Batch_Manager__c</columns>
    <columns>tc9_pr__Maximum_Payroll_Date__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Schedule__c</columns>
    <columns>tc9_pr__Payment_Date__c</columns>
    <columns>tc9_pr__Payroll_Date__c</columns>
    <columns>tc9_pr__Total_Gross__c</columns>
    <columns>tc9_pr__Total_Net__c</columns>
    <columns>tc9_pr__Calendar_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>