force-app/main/default/objects/tc9_pr__Pay_Batch__c/listViews/tc9_pr__Failed_Pay_Batches.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Failed_Pay_Batches</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Pay_Batch_Manager__c</columns>
    <columns>tc9_pr__Maximum_Payroll_Date__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Schedule__c</columns>
    <columns>tc9_pr__Payment_Date__c</columns>
    <columns>tc9_pr__Payroll_Date__c</columns>
    <columns>tc9_pr__Total_Gross__c</columns>
    <columns>tc9_pr__Total_Net__c</columns>
    <columns>tc9_pr__Calendar_Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Status__c</field>
        <operation>equals</operation>
        <value>Delete Failed,Calculate Failed,Finalise Failed,Unfinalise Failed,Pay Advice Delete Failed,Pay Advice Failed,Payment File Deletion Failed,Payment File Creation Failed,Payment File Failed</value>
    </filters>
    <label>Failed Pay Batches</label>
</ListView>